@@ -6,6 +6,7 @@ Revision history for App-USBKeyCopyCon
           --profile-dir   to specify location of custom profile scripts
           --profile       to select a profile
       - add UI support for selecting an alternative copying profile
+      - document the profile script API
 
 1.00  2009-11-28
       - initial release
